<resources>
    <string name="app_name">Profile App</string>

    <string name="home_title">(프로필 제목)</string>
    <string name="home_name">이름 : 김성진</string>
    <string name="home_age">나이 : 만 22세</string>
    <string name="homt_mbti">MBTI : ISTJ</string>
    <string name="home_gender">성별 : 남성</string>
    <string name="password">비밀번호 : 123456</string>
    <string name="sub_title">목표!</string>
    <string name="goal1">앱 개발자 취업</string>
    <string name="goal2">다양한 앱 개발 및 앱 개발자로서의 성장</string>
    <string name="end_message">종료</string>

    <string name="login_title">로그인</string>
    <string name="login_id">아이디</string>
    <string name="login_pd">비밀번호</string>
    <string name="et_login_id">아이디를 입력하세요</string>
    <string name="et_login_pd">비밀번호를 입력하세요</string>
    <string name="sw_on_off">비밀번호 가리기  </string>
    <string name="login_button">로그인</string>
    <string name="make_profile">회원가입</string>
    <string name="forgot">아이디 / 비밀번호 찾기</string>

    <string name="make_profile_title">회원가입</string>
    <string name="make_profile_name">이름</string>
    <string name="et_make_name">이름을 입력하세요</string>
    <string name="make_profile_id">아이디</string>
    <string name="et_make_id">아이디를 입력하세요.</string>
    <string name="make_profile_pd">비밀번호</string>
    <string name="et_make_pd">비밀번호를 입력하세요</string>
    <string name="make_profile_age">나이 (1~100)</string>
    <string name="et_make_age">나이를 입력하세요</string>
    <string name="make_profile_mbti">MBTI</string>
    <string name="et_make_mbti">MBTI</string>
    <string name="make_profile_gender">성별</string>
    <string name="et_make_gender">성별</string>
    <string name="make_profile_finish">회원가입 완료</string>

    <string name="isEmpty_sign_in">아이디 / 비밀번호를 확인해 주세요.</string>

    <string name="login_completed">로그인 성공!</string>
    <string name="make_profile_completed">회원가입 성공!</string>

    <string name="isEmpty_sign_up">입력되지 않은 정보가 있습니다.</string>
    <string name="over_age">입력 가능한 나이 숫자 범위를 벗어났습니다.</string>
    <string name="number_format">나이 입력이 잘못되었습니다.</string>
    <string name="over_gender">성별 입력이 잘못되었습니다.</string>
    <string name="over_mbti">MBTI 입력이 잘못되었습니다.</string>
</resources>